--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
         <div class="row justify-content-center">
-          <div class="col-10 col-lg-8 blurb">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
             <h2>MUSEUM OF CANDY</h2>
             <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="">
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, consequuntur, voluptate
@@ -79,12 +79,29 @@
     </div>
 
     <div class="row align-items-center content">
+      <div class="col-md-6 text-center">
+        <div class="row justify-content-center">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+            <h2>MUSEUM OF CANDY</h2>
+            <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="">
+            <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, consequuntur, voluptate
+              inventore corporis impedit ipsum fuga, et voluptates repudiandae aperiam fugiat illum? Animi consectetur
+              deleniti beatae nisi veniam numquam aliquid!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <img class="img-fluid" src="./imgs/gumball.png" alt="">
+      </div>
+    </div>
+
+    <div class="row align-items-center content">
       <div class="col-md-6 order-2 order-md-1">
-        <img class="img-fluid" src="./imgs/milk.png" alt="">
+        <img class="img-fluid" src="./imgs/sprinkles.png" alt="">
       </div>
       <div class="col-md-6 text-center order-1 order-md-2">
         <div class="row justify-content-center">
-          <div class="col-10 col-lg-8 blurb">
+          <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
             <h2>MUSEUM OF CANDY</h2>
             <img class="d-none d-lg-inline" src="./imgs/lolli_icon.png" alt="">
             <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, consequuntur, voluptate
@@ -111,6 +128,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 
 </body>
 
